Fix spacing between store elements

--- a/webDevelopment/Musicon/public/style.css
+++ b/webDevelopment/Musicon/public/style.css
@@ -102,7 +102,10 @@
   .instrument {
     width: 90%;
     overflow: auto;
-  
+    background-color: white;
+    opacity: 0.8;
+    border-radius: 5px 10px;
+    margin: 5% auto;
   }
   
   .image {
